# GeometryTest

./: .gitignore  CMakeLists.txt  main.cpp  region.cpp  region.h  region.inl  rmath.h
adapted/: adapted_cv.hpp  adapted_cv.inl  adapted_qt.hpp  adapted_qt.inl  qt_addpted.hpp  qt_addpted.inl
geometry/: geometry.hpp
geometry/geometries/: annulus.inl  arc.hpp  arc.inl  circle.hpp  circle.inl  line.inl  point.hpp  point.inl  polygon.hpp  polygon.inl  pose.inl  ray.inl  rectangle.hpp  rectangle.inl  rotatedRect.hpp  rotatedRect.inl  run.hpp  runs.hpp  runs.inl
wykobi/: wykobi.hpp
